test/bad/generics/type02.px

func f<T>(x: T, b: Bool): T def
    return b

f("false", false)
